expand game details, add splash screen, settings page, refinements
+ tweak app icon
+ add splash screen
+ add description and details to game details page
+ add game launch mechanics
+ add settings page

--- a/gamerack/GameDetails.xaml
+++ b/gamerack/GameDetails.xaml
@@ -14,6 +14,36 @@
         </Grid.RowDefinitions>
         <Image x:Name="imgHeader" Grid.Row="0" Stretch="UniformToFill" VerticalAlignment="Center" HorizontalAlignment="Center"/>
         <Rectangle Fill="#000"  Grid.Row="1"/>
-        <Label x:Name="lblTitle" Content="Label" Grid.Row="1" Foreground="White" Margin="10,10,50,10"/>
+        <Label x:Name="lblTitle" Grid.Row="1" Foreground="White" Margin="10,10,0,10" Content="Game title" VerticalAlignment="Center" FontSize="18" FontWeight="Bold"/>
+        <Button Content="Launch" Grid.Row="1" Width="75" HorizontalAlignment="Right" Margin="10" Click="ButtonPlay_Click"/>
+        <ScrollViewer Grid.Row="2">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="3*"/>
+                    <ColumnDefinition Width="2*"/>
+                </Grid.ColumnDefinitions>
+                <StackPanel Grid.Column="1" Margin="10">
+                    <TextBlock x:Name="lblSummary" TextWrapping="Wrap" Text="Summary" Foreground="White" VerticalAlignment="Top" Margin="0,0,0,10"/>
+                    <Grid Margin="0,0,0,10">
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Label Grid.Column="0" Grid.Row="0" FontWeight="Bold" Content="Developers"/>
+                        <Label x:Name="lblDev" Grid.Column="1" Grid.Row="0"/>
+                        <Label Grid.Column="0" Grid.Row="1" FontWeight="Bold" Content="Publishers"/>
+                        <Label x:Name="lblPub"  Grid.Column="1" Grid.Row="1"/>
+                        <Label Grid.Column="0" Grid.Row="2" FontWeight="Bold" Content="Released"/>
+                        <Label x:Name="lblRel"  Grid.Column="1" Grid.Row="2"/>
+                    </Grid>
+                    <Button Content="Edit" VerticalAlignment="Top" HorizontalAlignment="Stretch"/>
+                </StackPanel>
+            </Grid>
+        </ScrollViewer>
     </Grid>
 </UserControl>
