--- a/gamerack/GameDetails.xaml
+++ b/gamerack/GameDetails.xaml
@@ -13,16 +13,17 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Image x:Name="imgHeader" Grid.Row="0" Stretch="UniformToFill" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <Rectangle Fill="#000"  Grid.Row="1"/>
-        <Label x:Name="lblTitle" Grid.Row="1" Foreground="White" Margin="10,10,0,10" Content="Game title" VerticalAlignment="Center" FontSize="18" FontWeight="Bold"/>
-        <Button Content="Launch" Grid.Row="1" Width="75" HorizontalAlignment="Right" Margin="10" Click="ButtonPlay_Click"/>
-        <ScrollViewer Grid.Row="2">
+        <DockPanel Grid.Row="1" Margin="20">
+            <Label x:Name="lblTitle" Foreground="White" Content="Game title" VerticalAlignment="Center" FontSize="36" FontWeight="Bold"/>
+            <Button Content="Play" Width="300" Height="50" HorizontalAlignment="Right" Click="ButtonPlay_Click" Style="{DynamicResource AccentButtonStyle}"/>
+        </DockPanel>
+        <ScrollViewer Grid.Row="2" Margin="20,0,20,0">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="3*"/>
                     <ColumnDefinition Width="2*"/>
                 </Grid.ColumnDefinitions>
-                <StackPanel Grid.Column="0" Margin="10">
+                <StackPanel Grid.Column="0" Margin="0,0,10,0">
                     <Border Background="#262626" CornerRadius="7" DockPanel.Dock="Top" Padding="20">
                         <Grid x:Name="pnlPlaytime">
                             <Grid.RowDefinitions>
@@ -34,7 +35,7 @@
                                 <ColumnDefinition/>
                                 <ColumnDefinition/>
                             </Grid.ColumnDefinitions>
-                            <Label Grid.Column="0" Grid.Row="0" FontWeight="Bold" Content="Statistics"  Margin="0,0,0,10"/>
+                            <Label Grid.Column="0" Grid.Row="0" FontWeight="Bold" FontSize="18" Content="Statistics"  Margin="0,0,0,5"/>
                             <Label Grid.Column="0" Grid.Row="1" Content="Total Playtime"/>
                             <Label x:Name="lblTotalPlaytime" Grid.Column="1" Grid.Row="1" Content="xx hrs" HorizontalAlignment="Right"/>
                             <Label Grid.Column="0" Grid.Row="2" Content="Recent Playtime"/>
@@ -42,9 +43,9 @@
                         </Grid>
                     </Border>
                 </StackPanel>
-                <StackPanel Grid.Column="1" Margin="10">
-                    <TextBlock x:Name="lblSummary" TextWrapping="Wrap" Text="Summary" Foreground="White" VerticalAlignment="Top" Margin="0,0,0,10"/>
-                    <Grid Margin="0,0,0,10">
+                <StackPanel Grid.Column="1"  Margin="10,0,0,0">
+                    <TextBlock x:Name="lblSummary" TextWrapping="Wrap" Text="Summary" Foreground="White" VerticalAlignment="Top" Margin="0,0,0,30"/>
+                    <Grid Margin="0,0,0,20">
                         <Grid.RowDefinitions>
                             <RowDefinition/>
                             <RowDefinition/>
@@ -55,11 +56,11 @@
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
                         <Label Grid.Column="0" Grid.Row="0" FontWeight="Bold" Content="Developers"/>
-                        <Label x:Name="lblDev" Grid.Column="1" Grid.Row="0"/>
+                        <Label x:Name="lblDev" Grid.Column="1" Grid.Row="0" Margin="0,0,0,10"/>
                         <Label Grid.Column="0" Grid.Row="1" FontWeight="Bold" Content="Publishers"/>
-                        <Label x:Name="lblPub"  Grid.Column="1" Grid.Row="1"/>
+                        <Label x:Name="lblPub"  Grid.Column="1" Grid.Row="1" Margin="0,0,0,10"/>
                         <Label Grid.Column="0" Grid.Row="2" FontWeight="Bold" Content="Released"/>
-                        <Label x:Name="lblRel"  Grid.Column="1" Grid.Row="2"/>
+                        <Label x:Name="lblRel"  Grid.Column="1" Grid.Row="2" Margin="0,0,0,10"/>
                     </Grid>
                     <Button Content="Edit" VerticalAlignment="Top" HorizontalAlignment="Stretch"/>
                 </StackPanel>
