--- a/gamerack/HomePage.xaml
+++ b/gamerack/HomePage.xaml
@@ -7,7 +7,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CI536"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="720" d:DesignWidth="1280">
     <UserControl.Resources>
         <DataTemplate x:Key="ItemTemplate" DataType="{x:Type local:GameTileEntry}">
             <Border Name="border" BorderBrush="#FF000000" BorderThickness="2" CornerRadius="7">
@@ -39,10 +39,38 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Label Name="AllGamesTitle" Grid.Row="0" Content="All games" HorizontalAlignment="Left" Margin="10,10,13,10" FontSize="24" VerticalAlignment="Top"/>
-        <ListView Grid.Row="1"
+        <StackPanel x:Name="pnlRecent">
+            <Label Grid.Row="0" Content="Recent" HorizontalAlignment="Left" Margin="10,10,13,10" FontSize="24" VerticalAlignment="Top"/>
+            <ListView Grid.Row="1"
+                  Name="RecentList"
+                ItemTemplate="{StaticResource ItemTemplate}">
+                <ListView.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel Orientation="Horizontal" HorizontalAlignment="Left" ItemWidth="200" ItemHeight="267" MaxWidth="{Binding ActualWidth, ElementName=userControl, Mode=OneWay}"/>
+                    </ItemsPanelTemplate>
+                </ListView.ItemsPanel>
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="{x:Type ListViewItem}">
+                        <EventSetter Event="PreviewMouseLeftButtonDown" Handler="GameTile_LeftButtonDown" />
+                        <Setter Property="Background" Value="Transparent" />
+                        <Setter Property="Margin" Value="5"/>
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type ListViewItem}">
+                                    <ContentPresenter />
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </ListView.ItemContainerStyle>
+            </ListView>
+        </StackPanel>
+
+        <Label Name="AllGamesTitle" Grid.Row="1" Content="All games" HorizontalAlignment="Left" Margin="10,10,13,10" FontSize="24" VerticalAlignment="Top"/>
+        <ListView Grid.Row="2"
               Name="GamesListTile"
             ItemTemplate="{StaticResource ItemTemplate}">
             <ListView.ItemsPanel>
@@ -52,7 +80,7 @@
             </ListView.ItemsPanel>
             <ListView.ItemContainerStyle>
                 <Style TargetType="{x:Type ListViewItem}">
-                    <EventSetter Event="PreviewMouseLeftButtonDown" Handler="GamesListTile_LeftButtonDown" />
+                    <EventSetter Event="PreviewMouseLeftButtonDown" Handler="GameTile_LeftButtonDown" />
                     <Setter Property="Background" Value="Transparent" />
                     <Setter Property="Margin" Value="5"/>
                     <Setter Property="Template">
