--- a/gamerack/HomePage.xaml
+++ b/gamerack/HomePage.xaml
@@ -36,17 +36,40 @@
         </DataTemplate>
     </UserControl.Resources>
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
-        <StackPanel x:Name="pnlRecent">
-            <Label Grid.Row="0" Content="Recent" HorizontalAlignment="Left" Margin="10,10,13,10" FontSize="24" VerticalAlignment="Top"/>
-            <ListView Grid.Row="1"
+    <ScrollViewer>
+        <StackPanel>
+            <StackPanel x:Name="pnlRecent">
+                <Label Grid.Row="0" Content="Recent" HorizontalAlignment="Left" Margin="10,10,13,10" FontSize="24" VerticalAlignment="Top"/>
+                <ListView Grid.Row="1"
                   Name="RecentList"
                 ItemTemplate="{StaticResource ItemTemplate}">
+                    <ListView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel Orientation="Horizontal" HorizontalAlignment="Left" ItemWidth="200" ItemHeight="267" MaxWidth="{Binding ActualWidth, ElementName=userControl, Mode=OneWay}"/>
+                        </ItemsPanelTemplate>
+                    </ListView.ItemsPanel>
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="{x:Type ListViewItem}">
+                            <EventSetter Event="PreviewMouseLeftButtonDown" Handler="GameTile_LeftButtonDown" />
+                            <EventSetter Event="PreviewMouseRightButtonDown" Handler="GameTile_RightButtonDown" />
+                            <Setter Property="Background" Value="Transparent" />
+                            <Setter Property="Margin" Value="5"/>
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type ListViewItem}">
+                                        <ContentPresenter />
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </ListView.ItemContainerStyle>
+                </ListView>
+            </StackPanel>
+
+            <Label Name="AllGamesTitle" Grid.Row="1" Content="All games" HorizontalAlignment="Left" Margin="10,10,13,10" FontSize="24" VerticalAlignment="Top"/>
+            <ListView Grid.Row="2"
+              Name="GamesListTile"
+            ItemTemplate="{StaticResource ItemTemplate}">
                 <ListView.ItemsPanel>
                     <ItemsPanelTemplate>
                         <WrapPanel Orientation="Horizontal" HorizontalAlignment="Left" ItemWidth="200" ItemHeight="267" MaxWidth="{Binding ActualWidth, ElementName=userControl, Mode=OneWay}"/>
@@ -55,6 +78,7 @@
                 <ListView.ItemContainerStyle>
                     <Style TargetType="{x:Type ListViewItem}">
                         <EventSetter Event="PreviewMouseLeftButtonDown" Handler="GameTile_LeftButtonDown" />
+                        <EventSetter Event="PreviewMouseRightButtonDown" Handler="GameTile_RightButtonDown" />
                         <Setter Property="Background" Value="Transparent" />
                         <Setter Property="Margin" Value="5"/>
                         <Setter Property="Template">
@@ -66,33 +90,8 @@
                         </Setter>
                     </Style>
                 </ListView.ItemContainerStyle>
+
             </ListView>
         </StackPanel>
-
-        <Label Name="AllGamesTitle" Grid.Row="1" Content="All games" HorizontalAlignment="Left" Margin="10,10,13,10" FontSize="24" VerticalAlignment="Top"/>
-        <ListView Grid.Row="2"
-              Name="GamesListTile"
-            ItemTemplate="{StaticResource ItemTemplate}">
-            <ListView.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <WrapPanel Orientation="Horizontal" HorizontalAlignment="Left" ItemWidth="200" ItemHeight="267" MaxWidth="{Binding ActualWidth, ElementName=userControl, Mode=OneWay}"/>
-                </ItemsPanelTemplate>
-            </ListView.ItemsPanel>
-            <ListView.ItemContainerStyle>
-                <Style TargetType="{x:Type ListViewItem}">
-                    <EventSetter Event="PreviewMouseLeftButtonDown" Handler="GameTile_LeftButtonDown" />
-                    <Setter Property="Background" Value="Transparent" />
-                    <Setter Property="Margin" Value="5"/>
-                    <Setter Property="Template">
-                        <Setter.Value>
-                            <ControlTemplate TargetType="{x:Type ListViewItem}">
-                                <ContentPresenter />
-                            </ControlTemplate>
-                        </Setter.Value>
-                    </Setter>
-                </Style>
-            </ListView.ItemContainerStyle>
-
-        </ListView>
-    </Grid>
+    </ScrollViewer>
 </UserControl>
