--- a/gamerack/HomePage.xaml
+++ b/gamerack/HomePage.xaml
@@ -40,9 +40,7 @@
         <StackPanel>
             <StackPanel x:Name="pnlRecent">
                 <Label Grid.Row="0" Content="Recent" HorizontalAlignment="Left" Margin="10,10,13,10" FontSize="24" VerticalAlignment="Top"/>
-                <ListView Grid.Row="1"
-                  Name="RecentList"
-                ItemTemplate="{StaticResource ItemTemplate}">
+                <ListView Grid.Row="1" SelectionMode="Single" Name="RecentList" ItemTemplate="{StaticResource ItemTemplate}">
                     <ListView.ItemsPanel>
                         <ItemsPanelTemplate>
                             <WrapPanel Orientation="Horizontal" HorizontalAlignment="Left" ItemWidth="200" ItemHeight="267" MaxWidth="{Binding ActualWidth, ElementName=userControl, Mode=OneWay}"/>
@@ -67,9 +65,7 @@
             </StackPanel>
 
             <Label Name="AllGamesTitle" Grid.Row="1" Content="All games" HorizontalAlignment="Left" Margin="10,10,13,10" FontSize="24" VerticalAlignment="Top"/>
-            <ListView Grid.Row="2"
-              Name="GamesListTile"
-            ItemTemplate="{StaticResource ItemTemplate}">
+            <ListView Grid.Row="2" Name="GamesListTile" ItemTemplate="{StaticResource ItemTemplate}" SelectionMode="Single">
                 <ListView.ItemsPanel>
                     <ItemsPanelTemplate>
                         <WrapPanel Orientation="Horizontal" HorizontalAlignment="Left" ItemWidth="200" ItemHeight="267" MaxWidth="{Binding ActualWidth, ElementName=userControl, Mode=OneWay}"/>
