--- a/gamerack/EditGameInfo.xaml
+++ b/gamerack/EditGameInfo.xaml
@@ -1,39 +1,61 @@
-﻿<Window x:Class="CI536.EditGameInfo"
+﻿<ui:ContentDialog x:Class="CI536.EditGameInfo"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CI536"
         mc:Ignorable="d"
-        Title="EditGameInfo" Height="480" Width="407.124"
-        xmlns:ui="http://schemas.modernwpf.com/2019"
-        ui:WindowHelper.UseModernWindowStyle="True" ResizeMode="CanMinimize" WindowStartupLocation="CenterOwner" Topmost="True">
-    <ScrollViewer>
-        <Grid Margin="10">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="2*"/>
-            </Grid.ColumnDefinitions>
-            <Label Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" FontWeight="Bold" FontSize="18" Content="Edit info"  Margin="0,0,0,5"/>
-            <Label Grid.Column="0" Grid.Row="1" FontWeight="Bold" Content="Title"/>
-            <TextBox x:Name="txtTitle" Grid.Column="1" Grid.Row="1" Margin="0,0,0,10"/>
-            <Label Grid.Column="0" Grid.Row="2" FontWeight="Bold" Content="Sorting Title"/>
-            <TextBox x:Name="txtSortingTitle" Grid.Column="1" Grid.Row="2" Margin="0,0,0,10"/>
-            <Label Grid.Column="0" Grid.Row="3" FontWeight="Bold" Content="Summary"/>
-            <TextBox x:Name="txtSummary" Grid.Column="1" Grid.Row="3" Margin="0,0,0,10" SpellCheck.IsEnabled="True" MinLines="3" TextWrapping="Wrap"/>
-            <Label Grid.Column="0" Grid.Row="4" FontWeight="Bold" Content="Release Year"/>
-            <TextBox x:Name="txtYear" Grid.Column="1" Grid.Row="4" Margin="0,0,0,10" PreviewTextInput="NumericOnly" MaxLength="4" />
-            <Button Grid.Column="1" Grid.Row="5" Content="Save" Margin="0,0,0,10" Style="{DynamicResource AccentButtonStyle}" HorizontalAlignment="Stretch" Click="Save" VerticalAlignment="Top"/>
-            <Button Grid.Column="1" Grid.Row="6" Content="Populate from IGDB" Margin="0,0,0,10" HorizontalAlignment="Stretch" Click="FetchInfo" VerticalAlignment="Top"/>
-        </Grid>
-    </ScrollViewer>
-</Window>
+        Title="EditGameInfo"
+        IsPrimaryButtonEnabled="False"
+        IsSecondaryButtonEnabled="False"
+        xmlns:ui="http://schemas.modernwpf.com/2019">
+    <DockPanel>
+        <ScrollViewer DockPanel.Dock="Bottom">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="2*"/>
+                </Grid.ColumnDefinitions>
+                <Label Grid.Column="0" Grid.Row="0" FontWeight="Bold" Content="Title"/>
+                <TextBox x:Name="txtTitle" Grid.Column="1" Grid.Row="0" Margin="0,0,0,10"/>
+                <Label Grid.Column="0" Grid.Row="1" FontWeight="Bold" Content="Sorting Title" Margin="0,0,20,0"/>
+                <TextBox x:Name="txtSortingTitle" Grid.Column="1" Grid.Row="1" Margin="0,0,0,10"/>
+                <Label Grid.Column="0" Grid.Row="2" FontWeight="Bold" Content="Summary"/>
+                <TextBox x:Name="txtSummary" Grid.Column="1" Grid.Row="2" Margin="0,0,0,10" SpellCheck.IsEnabled="True" MinLines="3" TextWrapping="Wrap" AcceptsReturn="True"/>
+                <Label Grid.Column="0" Grid.Row="3" FontWeight="Bold" Content="Release Year"/>
+                <TextBox x:Name="txtYear" Grid.Column="1" Grid.Row="3" Margin="0,0,0,10" PreviewTextInput="NumericOnly" MaxLength="4" />
+                <Separator Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2" Margin="0,0,0,10" />
+                <Label Grid.Column="0" Grid.Row="5" FontWeight="Bold" Content="Developers"/>
+                <TextBox x:Name="txtDev" Grid.Column="1" Grid.Row="5" Margin="0,0,0,10" TextWrapping="Wrap" AcceptsReturn="True"/>
+                <Label Grid.Column="0" Grid.Row="6" FontWeight="Bold" Content="Publishers"/>
+                <TextBox x:Name="txtPub" Grid.Column="1" Grid.Row="6" Margin="0,0,0,5" TextWrapping="Wrap" AcceptsReturn="True"/>
+                <StackPanel Grid.Column="0" Grid.Row="8" Grid.ColumnSpan="2" >
+                    <TextBlock Margin="0,0,0,10" TextWrapping="Wrap" Text="Seperate multiple companies with a newline." HorizontalAlignment="Right" Foreground="#FF919191"/>
+                    <Separator Margin="0,0,0,10" />
+                    <Label FontWeight="Bold" Content="Populate from IGDB"/>
+                    <TextBlock Margin="0,0,0,10" TextWrapping="Wrap" Text="Gamerack can populate this info automatically using IGDB data sources, including cover art, screenshots and other media. The entry's current title is used to find a matching entry. Any existing data will be overwritten."/>
+                    <Button Content="Fetch from IGDB" Margin="0,0,0,10" HorizontalAlignment="Stretch" Click="FetchInfo" VerticalAlignment="Top"/>
+                </StackPanel>
+                <Separator Grid.Column="0" Grid.Row="9" Grid.ColumnSpan="2" Margin="0,0,0,10" />
+                <DockPanel Grid.Column="0" Grid.Row="10" Grid.ColumnSpan="2" HorizontalAlignment="Right">
+                    <Button Content="Save" Margin="0,0,10,10" Style="{DynamicResource AccentButtonStyle}" Click="Save"/>
+                    <Button Content="Cancel" Margin="0,0,0,10" Click="Cancel"/>
+                </DockPanel>
+            </Grid>
+        </ScrollViewer>
+    </DockPanel>
+
+</ui:ContentDialog>
