--- a/gamerack/SettingsPage.xaml
+++ b/gamerack/SettingsPage.xaml
@@ -1,29 +1,51 @@
-﻿<Page x:Class="CI536.SettingsPage"
+﻿<UserControl x:Class="CI536.SettingsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:CI536"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="SettingsPage">
-
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <Label Grid.Row="0" Content="Settings" HorizontalAlignment="Left" Margin="10,10,13,10" FontSize="24" VerticalAlignment="Top"/>
-        <Label Grid.Row="1" Content="Plugins" HorizontalAlignment="Left" Margin="10,10,13,10" VerticalAlignment="Top"/>
-        <Grid Grid.Row="2" >
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
-            <Label Grid.Column="0" Content="Steam" HorizontalAlignment="Left" Margin="10,10,13,10" VerticalAlignment="Top"/>
-            <Button Grid.Column="1" x:Name="btn_login" Content="Login" Click="Button_Login" HorizontalAlignment="Right" Margin="0,12,68,10"/>
-            <Button Grid.Column="1" x:Name="btn_sync" Content="Sync " Click="Button_Sync" HorizontalAlignment="Right" Margin="10,10,13,10"/>
-        </Grid>
-    </Grid>
-</Page>
+      d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <DataTemplate x:Key="Plugin">
+            <DockPanel HorizontalAlignment="Stretch"  Margin="10">
+                <CheckBox IsChecked="True" IsEnabled="False"/>
+                <StackPanel HorizontalAlignment="Stretch">
+                    <Label FontWeight="Bold" Content="{Binding Name}"/>
+                    <DockPanel HorizontalAlignment="Stretch">
+                        <StackPanel DockPanel.Dock="Left" Margin="0,0,50,0">
+                            <TextBlock>Author: <Run Text="{Binding Author, Mode=OneWay}"/></TextBlock>
+                            <TextBlock Margin="0,0,0,10">Version: <Run Text="{Binding Version, Mode=OneWay}"/></TextBlock>
+                        </StackPanel>
+                        <StackPanel DockPanel.Dock="Right">
+                            <Label Content="{Binding Summary}"/>
+                        </StackPanel>
+                    </DockPanel>
+                </StackPanel>
+            </DockPanel>
+        </DataTemplate>
+    </UserControl.Resources>
+    <StackPanel>
+        <Label Content="Plugins" HorizontalAlignment="Left" Margin="10,10,13,10" FontSize="24" VerticalAlignment="Top"/>
+        <ListBox Name="ListPlugins" ItemTemplate="{StaticResource Plugin}" Background="Transparent" SelectionMode="Single">
+            <ListBox.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel HorizontalAlignment="Left"/>
+                </ItemsPanelTemplate>
+            </ListBox.ItemsPanel>
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="{x:Type ListBoxItem}">
+                    <Setter Property="Background" Value="Transparent" />
+                    <Setter Property="Margin" Value="0"/>
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                <ContentPresenter />
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListBox.ItemContainerStyle>
+        </ListBox>
+    </StackPanel>
+</UserControl>
